// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswerValidation Numeric answer validation preview maxValue should display when unit type is null 1`] = `null`;

exports[`AnswerValidation Numeric answer validation preview maxValue should not render when the custom value is null 1`] = `null`;

exports[`AnswerValidation Numeric answer validation preview maxValue should not render when the custom value is null 2`] = `null`;

exports[`AnswerValidation Numeric answer validation preview maxValue should not render when the custom value is null 3`] = `null`;

exports[`AnswerValidation Numeric answer validation preview maxValue should not render when the custom value is null 4`] = `null`;

exports[`AnswerValidation Numeric answer validation preview maxValue should render custom values 1`] = `null`;

exports[`AnswerValidation Numeric answer validation preview maxValue should render custom values 2`] = `null`;

exports[`AnswerValidation Numeric answer validation preview maxValue should render custom values 3`] = `null`;

exports[`AnswerValidation Numeric answer validation preview maxValue should render custom values 4`] = `null`;

exports[`AnswerValidation Numeric answer validation preview maxValue should render previous answer 1`] = `null`;

exports[`AnswerValidation Numeric answer validation preview maxValue should render previous answer 2`] = `null`;

exports[`AnswerValidation Numeric answer validation preview maxValue should render previous answer 3`] = `null`;

exports[`AnswerValidation Numeric answer validation preview maxValue should render previous answer 4`] = `null`;

exports[`AnswerValidation Numeric answer validation preview minValue should display when unit type is null 1`] = `null`;

exports[`AnswerValidation Numeric answer validation preview minValue should not render when the custom value is null 1`] = `null`;

exports[`AnswerValidation Numeric answer validation preview minValue should not render when the custom value is null 2`] = `null`;

exports[`AnswerValidation Numeric answer validation preview minValue should not render when the custom value is null 3`] = `null`;

exports[`AnswerValidation Numeric answer validation preview minValue should not render when the custom value is null 4`] = `null`;

exports[`AnswerValidation Numeric answer validation preview minValue should render custom values 1`] = `null`;

exports[`AnswerValidation Numeric answer validation preview minValue should render custom values 2`] = `null`;

exports[`AnswerValidation Numeric answer validation preview minValue should render custom values 3`] = `null`;

exports[`AnswerValidation Numeric answer validation preview minValue should render custom values 4`] = `null`;

exports[`AnswerValidation Numeric answer validation preview minValue should render previous answer 1`] = `null`;

exports[`AnswerValidation Numeric answer validation preview minValue should render previous answer 2`] = `null`;

exports[`AnswerValidation Numeric answer validation preview minValue should render previous answer 3`] = `null`;

exports[`AnswerValidation Numeric answer validation preview minValue should render previous answer 4`] = `null`;

exports[`AnswerValidation should not render when there are no valid validation types 1`] = `""`;

exports[`AnswerValidation should render 1`] = `
<ContextProvider
  value={
    Object {
      "answer": Object {
        "id": "1",
        "type": "Number",
        "validation": Object {
          "maxValue": Object {
            "enabled": false,
            "validationErrorInfo": Object {
              "errors": Array [],
            },
          },
          "minValue": Object {
            "enabled": false,
            "validationErrorInfo": Object {
              "errors": Array [],
            },
          },
        },
      },
    }
  }
>
  <AnswerValidation__SidebarValidation
    data-test="sidebar-button-min-value"
    hasError={0}
    id="minValue"
    key="minValue"
    onClick={[Function]}
  >
    <SidebarButton__Title>
      Set min value
    </SidebarButton__Title>
  </AnswerValidation__SidebarValidation>
  <AnswerValidation__SidebarValidation
    data-test="sidebar-button-max-value"
    hasError={0}
    id="maxValue"
    key="maxValue"
    onClick={[Function]}
  >
    <SidebarButton__Title>
      Set max value
    </SidebarButton__Title>
  </AnswerValidation__SidebarValidation>
  <ModalWithNav
    id="modal-validation-1"
    isOpen={false}
    navItems={
      Array [
        Object {
          "id": "minValue",
          "preview": [Function],
          "render": [Function],
          "title": "Min value",
          "types": Array [
            "Currency",
            "Number",
            "Percentage",
            "Unit",
          ],
        },
        Object {
          "id": "maxValue",
          "preview": [Function],
          "render": [Function],
          "title": "Max value",
          "types": Array [
            "Currency",
            "Number",
            "Percentage",
            "Unit",
          ],
        },
      ]
    }
    onClose={[Function]}
    startingTabId={null}
    title="Number validation"
  />
</ContextProvider>
`;

exports[`AnswerValidation validation object array should render the Earliest date validation 1`] = `
<Component
  displayName="Earliest date"
  readKey="earliestDate"
  testId="earliest-date-validation"
>
  <Component />
</Component>
`;

exports[`AnswerValidation validation object array should render the Latest date validation 1`] = `
<Component
  displayName="Latest date"
  readKey="latestDate"
  testId="latest-date-validation"
>
  <Component />
</Component>
`;

exports[`AnswerValidation validation object array should render the Max duration validation 1`] = `
<Component
  displayName="Max duration"
  readKey="maxDuration"
  testId="max-duration-validation"
>
  <Component />
</Component>
`;

exports[`AnswerValidation validation object array should render the Max value validation 1`] = `
<Component
  displayName="Max value"
  readKey="maxValue"
  testId="max-value-validation"
>
  <Component />
</Component>
`;

exports[`AnswerValidation validation object array should render the Min duration validation 1`] = `
<Component
  displayName="Min duration"
  readKey="minDuration"
  testId="min-duration-validation"
>
  <Component />
</Component>
`;

exports[`AnswerValidation validation object array should render the Min value validation 1`] = `
<Component
  displayName="Min value"
  readKey="minValue"
  testId="min-value-validation"
>
  <Component />
</Component>
`;
